[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,8 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your webapp.
+            THIS IS MY FIRST WEB APP..
+            <pre> User : </pre> MANISH KUMAR..
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
