--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <br>
         <div class="center text-big bold">
             THIS IS MY FIRST WEB APP..
-            <pre> User : </pre> MANISH KUMAR..
+            <pre> User : Manish kumar.. </pre> 
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
