[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,7 @@
         <div class="center text-big bold">
             THIS IS MY FIRST WEB APP..
             <pre> User : Manish kumar.. </pre> 
+            <img src="D:\Manish Kumar\Downloads\googlelogo_color_272x92dp.png" />
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
