--- a/ui/index.html
+++ b/ui/index.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
+         <script type=text\javascript>
+         var GET =  document.getElementById('move');
+         GET.onclick = function(){
+             GET.style.marginLeft = '100px';
+         };
+        </script>
     </head>
     <body>
         <div class="center">
