[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
-         <script type=text\javascript>
+         <script type=text/javascript>
          var GET =  document.getElementById('move');
          GET.onclick = function(){
              GET.style.marginLeft = '100px';
