--- a/ui/index.html
+++ b/ui/index.html
@@ -4,6 +4,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
          <script type=text/javascript>
          var GET =  document.getElementById('move');
+         alert('JAVASCRIPT');
          GET.onclick = function(){
              GET.style.marginLeft = '100px';
          };
