--- a/ui/index.html
+++ b/ui/index.html
@@ -2,14 +2,8 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
-         <script type=text/javascript>
-         var GET =  document.getElementById('move');
-         alert('JAVASCRIPT');
-         GET.onclick = function(){
-             GET.style.marginLeft = '100px';
-         };
-        </script>
-    </head>
+        <link href="ui/main.js" rel="javascript" />
+         </head>
     <body>
         <div class="center">
             <img src="/ui/madi.png" class="img-medium" id='move'/>
