[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -3,6 +3,9 @@
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
         <link href="ui/main.js" rel="javascript" />
+        <script type="text/javascript">
+            alert("This is your first web page.");
+        </script>
          </head>
     <body>
         <div class="center">
