[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,8 +13,8 @@
         </div>
         <br>
         <div class="center text-big bold">
-            THIS IS MY FIRST WEB APP..
-            <pre> User : Manish kumar.. </pre> 
+           <h1>MY FIRST WEB APP.</h1>
+            <pre> User : Manish kumar.. </pre>
             
         </div>
         <script type="text/javascript" src="/ui/main.js">
