[imad-console] Updates ui/file1.html

--- a/ui/file1.html
+++ b/ui/file1.html
@@ -1,2 +1,12 @@
 <html>
+    <head>
+        <title>
+            FILE 1
+        </title>
+    </head>
+    <body>
+        <h1>This the file one.</h1>
+        <hr/>
+        
+    </body>
 </html>
