--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,12 @@
 <html>
+    <head>
+        <title>
+            Article one.
+        </title>
+    </head>
+    <body>
+        <p>
+            This is the text.
+        </p>
+    </body>
 </html>
