[imad-console] Updates ui/myarc.html

--- a/ui/myarc.html
+++ b/ui/myarc.html
@@ -1,1 +1,10 @@
-
+<html>
+    <head>
+        <title>
+            FIRST
+        </title>
+        </head>
+        <body>
+            <h1>THIS IS IT..</h1>
+        </body>
+</html>
