--- a/ui/myarc1.html
+++ b/ui/myarc1.html
@@ -1,1 +1,16 @@
-
+<html>
+    <head>
+        <title>
+            Article two.
+        </title>
+    </head>
+    <body>
+        <h2>
+            ARTICLE TWO..
+        </h2>
+        <hr/>
+        <p>
+            This the paragraph of article two goes here..
+        </p>
+    </body>
+</html>
