[imad-console] Updates ui/arcticle3.html

--- a/ui/arcticle3.html
+++ b/ui/arcticle3.html
@@ -1,1 +1,12 @@
-
+<html>
+    <head>
+        <title>
+            ARTICLE THREE.
+        </title>
+    </head>
+    <body>
+        <h1>
+            The content of article three goes here.
+        </h1>
+    </body>
+</html>
