[imad-console] Updates ui/arcticle3.html

--- a/ui/arcticle3.html
+++ b/ui/arcticle3.html
@@ -8,5 +8,9 @@
         <h1>
             The content of article three goes here.
         </h1>
+        <hr/>
+        <p>
+        ARticle three ARticle three ARticle three ARticle three ARticle three ARticle three ARticle three ARticle three ARticle three ARticle three ..
+        </p>
     </body>
 </html>
